# SAGE

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
apps/electron-control-panel/: .env.example  index.html  main.cjs  package-lock.json  package.json
apps/electron-control-panel/src/: api.ts  main.tsx  styles.css
docs/: architecture.md  local-setup.md  roadmap.md  safety.md
docs/demo/: README.md
sage/: __init__.py  cli.py  contracts.py
sage/api/: __init__.py  app.py
sage/audio/: __init__.py  recorder.py
sage/context/: __init__.py  profile.py
sage/daemon/: __init__.py  server.py  state.py
sage/llm/: __init__.py
sage/memory/: __init__.py  store.py
sage/observability/: __init__.py  diagnostics.py
sage/planner/: __init__.py  direct.py  factory.py  ollama.py
sage/response/: __init__.py  formatter.py
sage/runtime/: __init__.py  supervisor.py
sage/safety/: __init__.py  policy.py
sage/stt/: __init__.py  whisper_cpp.py
sage/tools/: __init__.py  registry.py
sage/tts/: __init__.py  piper.py
scripts/: check-demo-ready.sh  setup-local.sh
tests/: test_api.py  test_audio.py  test_cli.py  test_contracts.py  test_diagnostics.py  test_direct_planner.py  test_memory.py  test_planner.py  test_safety.py  test_stt.py  test_supervisor.py  test_tools.py  test_tts.py
